--- a/src/views/feedbackPage.html
+++ b/src/views/feedbackPage.html
@@ -4,7 +4,9 @@
 {% include "templates/pageTopMenu.html" %}
 <hr>
     <div class="content row">
-        <div class="col-xl-9 col-md-9 col-sm-9 col-12">
+        <div class="col-xl-9 col-md-9 col-sm-9 col-12" style="padding:10px;padding-left: 50px; padding-right: 50px">
+            <p>Свои замечания, предложения к работе платформы взаимодействия сторон, публичным отчетам, можете направить менеджеру платформы – Чистяковой Александре Владимировне. Телефон для связи
+            </p>
         <form action="/feedback/send" method="POST" enctype="multipart/form-data"> 
             <div class="form-group">
                 <label for="name">ФИО</label>
