--- a/src/views/registration.html
+++ b/src/views/registration.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="container">
     <div class="row row-flex">
-        <div class="col-md-3"></div>
+        <div class="col-md-1"></div>
         <div class="col-md-6">
             <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item">
@@ -118,7 +118,17 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-3"></div>
+        <div class="col-md-4 content-block">
+            <div class=" ">
+                <img src="/img/info.png" width="32px" height="32px">
+                <p style="font-size:9pt;">«Зарегистрированный пользователь» - любой зарегистрировавшийся посетитель платформы.  Зарегистрированные пользователи, помимо доступа к публичным материалам, размещенным на платформе (годовые отчеты, материалы проведенных мероприятий), получают возможность участвовать в проводимых компанией  публичных опросах и скачивать аналитику по результатам таких опросов. </p>
+                <p style="font-size:9pt;">«Заинтересованные стороны» (стейкхолдеры) - это физические и/или юридические лица, а также группы лиц, которые своими действиями влияют на деятельность Инжинирингового дивизиона Госкорпорации «Росатом» и/или испытывают на себе ее влияние. «Стейкхолдеры» получают расширенный доступ к материалам и функционалу платформы через «личный кабинет».  В личном кабинете стейкхолдеры имеют возможность участвовать в обсуждении материалов (концепций, проектов отчетов и т.п.), получать персональные приглашения на мероприятия, наряду с общими опросами участвовать в опросах стейкхолдеров и получать аналитику по результатам таких опросов. </p>
+            </div>
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-12" style="margin-top:30px;margin-bottom:30px;">
+            <center><a href="/instruction">ИНСТРУКЦИЯ ПОЛЬЗОВАТЕЛЯ ПЛАТФОРМЫ</a></center>
+        </div>
     </div>
     <h1>{{error}}</h1>
 </div>
