--- a/src/views/mainPage.html
+++ b/src/views/mainPage.html
@@ -20,9 +20,12 @@
                         <br>
                         </a>
                         {%endfor%}
-                        <br>
+                        <p class="allev">
+                        
                         <a href="/events" class="allevents"> Все события </a>
+                        </p>
                 </div>
+                
         </div>
         <div class="row times col-xl-9 col-lg-9 col-md-9 col-sm-12 col-12">
 
@@ -84,5 +87,4 @@
                 </div>
         </div>
 </div>
-
 {% endblock %}
