--- a/src/views/templates/pageTemplate.html
+++ b/src/views/templates/pageTemplate.html
@@ -68,14 +68,23 @@
 <!-- Footer -->
 <!-- ======================================================= -->
 {% block footer %}
+<div id="acceptCookie" data-cookie-expiry="60" style="display: block;">
+    <p>
+     Этот сайт использует cookies. Продолжая работу с сайтом, Вы выражаете своё согласие на обработку Ваших персональных данных с использованием интернет-сервиса Яндекс Метрика. Отключить cookies Вы можете в настройках своего браузера. 
+<a href="/cookies" title="Подробнее о Cookie"> Подробнее</a></p>
+<div id="cookie_access" onclick="iAccept()">СОГЛАСЕН</div>
+</div>
 <footer>
         <div class="foot">
-               <p>Copyright 2013-2016 «Да-Стратегия»<br>
-Все права защищены. Использование материалов возможно только с разрешения администрации</p> 
+               <p>Copyright 2013-2019 «Да-Стратегия»<br>
+Все права защищены. Использование материалов возможно только с разрешения администрации<br>
+                <a href="/legal-notice" style="color:darkblue">Правовая информация</a>
+</p> 
         </div>
     </footer>  
     {% if not currentUser %}{% endif %}
     {% block commonJS %}
+    <script src="/js/cookie.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
