--- a/src/views/registration.html
+++ b/src/views/registration.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/temp.css">
 <link rel="stylesheet" href="/css/login.css">
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 {% endblock %}
 {% block content %}
 <div class="container">
@@ -30,7 +31,7 @@
                             <br>
                             <input name="email" class="form-control" placeholder="E-mail" id="log">
                             <br>
-                            {{captcha | safe}}
+                            <div class="g-recaptcha" data-sitekey="6Le32ZcUAAAAAJOQ_HUTM0J1CitHgn6-CoXag-GF"></div>
                             <button class="auth-button btn btn-primary btn-block" type="submit">Регистрация</button>
                         </form>
                     </div>
@@ -111,7 +112,7 @@
                                     </p>
                                     <input class="form-control" type="text" name="contact_information" placeholder="Контактная информация (телефон)"><br>
                                     <input class="form-control" type="text" name="address" placeholder="Место проживания"><br>
-                                    {{captcha | safe}}
+                                    <div class="g-recaptcha" data-sitekey="6Le32ZcUAAAAAJOQ_HUTM0J1CitHgn6-CoXag-GF"></div>
                                 <button class="auth-button btn btn-primary btn-block" type="submit">Регистрация</button>
                             </form>
                         </div>
