--- a/src/views/registration.html
+++ b/src/views/registration.html
@@ -4,8 +4,13 @@
 <link rel="stylesheet" href="/css/temp.css">
 <link rel="stylesheet" href="/css/login.css">
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-{% endblock %}
-{% block content %}
+{% if (err) %}
+<div class="alert alert-dark" role="alert">
+    <center>
+    {{err}}
+    </center>
+</div>
+{% endif %}
 <div class="container">
     <div class="row row-flex">
         <div class="col-md-1"></div>
