доделал капчу, исправил регу юзера

--- a/src/views/templates/pageTemplate.html
+++ b/src/views/templates/pageTemplate.html
@@ -68,7 +68,7 @@
 <!-- Footer -->
 <!-- ======================================================= -->
 {% block footer %}
-<div id="acceptCookie" data-cookie-expiry="60" style="display: block;">
+<div id="acceptCookie" data-cookie-expiry="60" style="display: none;">
     <p>
      Этот сайт использует cookies. Продолжая работу с сайтом, Вы выражаете своё согласие на обработку Ваших персональных данных с использованием интернет-сервиса Яндекс Метрика. Отключить cookies Вы можете в настройках своего браузера. 
 <a href="/cookies" title="Подробнее о Cookie"> Подробнее</a></p>
