--- a/src/views/registration.html
+++ b/src/views/registration.html
@@ -15,16 +15,32 @@
     <div class="row row-flex">
         <div class="col-md-1"></div>
         <div class="col-md-6">
+                <h1 style="color:red">{{error}}</h1>
             <ul class="nav nav-tabs" id="myTab" role="tablist">
+                    {% if stakehold == true %}
                     <li class="nav-item">
-                      <a class="nav-link auth active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Пользователь</a>
+                        <a class="nav-link auth" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Пользователь</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link auth" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Стейкхолдер</a>
+                        <a class="nav-link auth  active show" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Стейкхолдер</a>
+                    </li>                 
+                            
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link auth active show" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Пользователь</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link auth" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Стейкхолдер</a>
+                    </li>               
+                    {% endif %}
             </ul>
             <div class="tab-content" id="myTabContent">
-                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                {% if stakehold == true %}
+                <div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">
+                {% else %}
+                <div class="tab-pane fade active show" id="home" role="tabpanel" aria-labelledby="home-tab">
+                    
+                {% endif %}
                     <div class="autorize-block">
                         <center><h2>Регистрация пользователя</h2></center>
                         <form action="/registrationUser" method="POST">
@@ -41,7 +57,12 @@
                         </form>
                     </div>
                 </div>
+                {% if stakehold == true %}
+                
+                <div class="tab-pane fade  active show" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                {% else %}
                 <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                {% endif %}
                     <div class="autorize-block">
                             <center><h2>Регистрация стейкхолдера</h2></center>
 
@@ -136,6 +157,5 @@
             <center><a href="/instruction">ИНСТРУКЦИЯ ПОЛЬЗОВАТЕЛЯ ПЛАТФОРМЫ</a></center>
         </div>
     </div>
-    <h1>{{error}}</h1>
 </div>
 {% endblock %}
