--- a/src/views/logPage.html
+++ b/src/views/logPage.html
@@ -95,7 +95,7 @@
                         </form>
                         <center>
                                 <br>
-                                <u><a href="/registration">Регистрация</a></u>
+                                <u><a href="/registration/us">Регистрация</a></u>
                                 <br>
                                 <br>
                                 <a href="#">Я не помпню пароль</a>
@@ -115,7 +115,7 @@
                             </form>
                             <center>
                                 <br>
-                                <u><a href="/registration">Регистрация</a></u>
+                                <u><a href="/registration/sh">Регистрация</a></u>
                                 <br>
                                 <br>
                                 <a href="#">Я не помню пароль</a>
