--- a/src/views/templates/pageTopMenu.html
+++ b/src/views/templates/pageTopMenu.html
@@ -1,6 +1,6 @@
 <div class="menu row">
         <a class="col-xl-1 d-none d-xl-block"></a>
-        <a class="col-xl-3 col-12 col-md-3 col-sm-12 text-center my-auto" href="/registration">РЕГИСТРАЦИЯ</a>
+        <a class="col-xl-3 col-12 col-md-3 col-sm-12 text-center my-auto" href="/registration/sh">РЕГИСТРАЦИЯ</a>
         <a class="col-xl-4 col-12 col-md-4 col-sm-12 text-center my-auto" href="/contacts">КОНТАКТНАЯ ИНФОРМАЦИЯ</a>
         <a class="col-xl-4 col-12 col-md-5 col-sm-12 text-center my-auto" href="/instruction">ИНСТРУКЦИЯ ПОЛЬЗОВАТЕЛЯ</a>
 </div>
